--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,10 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.6",
+        "phpseclib/phpseclib": "~3.0",
         "spatie/laravel-medialibrary": "^11.12",
-        "spatie/laravel-sluggable": "^3.7"
+        "spatie/laravel-sluggable": "^3.7",
+        "spatie/livewire-filepond": "^1.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
