--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.6",
+        "phpseclib/phpseclib": "~3.0",
         "spatie/laravel-sluggable": "^3.7"
     },
     "require-dev": {
