trying onesignal push notification

--- a/.env.example
+++ b/.env.example
@@ -76,3 +76,6 @@ APPLE_REDIRECT_URI="/auth/apple/callback"
 APPLE_TEAM_ID=
 APPLE_KEY_ID=
 APPLE_PRIVATE_KEY=
+
+ONESIGNAL_APP_ID=your_onesignal_app_id
+ONESIGNAL_API_KEY=your_onesignal_api_key
